--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "build": {
       "env": {
-        "NODE_VERSION": "18.x"
+        "NODE_VERSION": "18.0"
       },
       "outputDirectory": "dist"
     }
